--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
 
         <nav class="navbar">
-          <a href="#">Home</a>
+          <a href="#home">Home</a>
           <a href="#about">Sobre</a>
           <a href="#menu">Menu</a>
           <a href="#review">Avaliações</a>
@@ -44,5 +44,17 @@
         </div>
       </section>
     </header>
+
+    <div class="home-container">
+        <section id="home">
+            <div class="content">
+                <h3>Code com o melhor café da região</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Officia incidunt quam odio, fugit ipsam in?</p>
+                    <a href="#" class="btn">Pegue o seu Agora!</a>
+            </div>
+        </section>
+    </div>
+
   </body>
 </html>
