--- a/index.html
+++ b/index.html
@@ -56,5 +56,21 @@
         </section>
     </div>
 
+    <section class="about"  id="about">
+      <h2 class="title">Sobre <span>Nós</span></h2>
+      <div class="row">
+          <div class="container-image">
+            <img src="./assets/images/about-img.jpg" alt="sobre-nos">
+          </div>
+          <div class="content">
+            <h3>O que faz nosso café especial </h3>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ad.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, deleniti?</p>
+            <a href="#" class="btn">Saiba mais!</a>
+          </div>
+      </div>
+
+    </section>
+
   </body>
 </html>
