--- a/index.html
+++ b/index.html
@@ -72,5 +72,49 @@
 
     </section>
 
+    <section class="menu" id="menu">
+      <h2 class="title">Nosso <span>Menu</span></h2>
+
+      <div class="box-container">
+        <div class="box">
+        <img src="./assets/images/menu-1.png" alt="item-1">
+        <h3>Café coado</h3>
+        <div class="price">R$15,99 <span>R$20,99</span></div>
+        <a href="#" class="btn">Adicione ao carrinho</a>
+      </div>
+        <div class="box">
+        <img src="./assets/images/menu-2.png" alt="item-2">
+        <h3>Café coado</h3>
+        <div class="price">R$15,99 <span>R$20,99</span></div>
+        <a href="#" class="btn">Adicione ao carrinho</a>
+      </div>
+        <div class="box">
+        <img src="./assets/images/menu-3.png" alt="item-3">
+        <h3>Café coado</h3>
+        <div class="price">R$15,99 <span>R$20,99</span></div>
+        <a href="#" class="btn">Adicione ao carrinho</a>
+      </div>
+        <div class="box">
+        <img src="./assets/images/menu-4.png" alt="item-4">
+        <h3>Café coado</h3>
+        <div class="price">R$15,99 <span>R$20,99</span></div>
+        <a href="#" class="btn">Adicione ao carrinho</a>
+      </div>
+        <div class="box">
+        <img src="./assets/images/menu-5.png" alt="item-5">
+        <h3>Café coado</h3>
+        <div class="price">R$15,99 <span>R$20,99</span></div>
+        <a href="#" class="btn">Adicione ao carrinho</a>
+      </div>
+        <div class="box">
+        <img src="./assets/images/menu-6.png" alt="item-6">
+        <h3>Café coado</h3>
+        <div class="price">R$15,99 <span>R$20,99</span></div>
+        <a href="#" class="btn">Adicione ao carrinho</a>
+      </div>
+    </div>
+    </section>
+
+
   </body>
 </html>
