--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="home-container">
         <section id="home">
             <div class="content">
-                <h3>Code com o melhor café da região</h3>
+                <h3>O melhor café da região</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Officia incidunt quam odio, fugit ipsam in?</p>
                     <a href="#" class="btn">Pegue o seu Agora!</a>
